fixed leter spacing

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
     font-family: "Nasalization", sans-serif;
     text-align: center;
     font-size: 64px;
+    letter-spacing: 0.08em;
     margin-top: 10px;
     color: white;
 }
